# Advent-of-Code

./: .gitignore  CMakeLists.txt  build.gradle  readme.md
fun/: year2022day1.rock  year2023day1.rock
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/utils/: point.h  range.h  template.cpp  utils.cpp  utils.h
src/main/cpp/year2015/: day1.cpp  day2.cpp  day3.cpp  day4.cpp
src/main/cpp/year2023/: day1.cpp
src/main/cpp/year2024/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
src/main/cpp/year2025/: day1.cpp  day10.cpp  day11.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
src/main/java/pl/mmakos/advent/utils/: Bool.java  CreateFiles.java  CreateFilesCpp.java  Int.java  Pair.java  Point.java  Rect.java  Ref.java  Utils.java
src/main/java/pl/mmakos/advent/year2021/: Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java
src/main/java/pl/mmakos/advent/year2022/: Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Day3.java  Day4.java  Day5.java  Day6.java  Day7.java  Day8.java  Day9.java
src/main/java/pl/mmakos/advent/year2023/: Day1.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day2.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  (+7 more)
(+4 files in other folders)
